--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-node_modules/jasmine-core
+node_modules/*
+!node_modules/todomvc-app-css
+!node_modules/todomvc-common
+
+node_modules/todomvc-app-css/*
+!node_modules/todomvc-app-css/index.css
+!node_modules/todomvc-app-css/check-false.svg
+!node_modules/todomvc-app-css/check-true.svg
+
+node_modules/todomvc-common/*
+!node_modules/todomvc-common/base.js
+!node_modules/todomvc-common/base.css
+
+documentation
